fix z-index menu

--- a/style.css
+++ b/style.css
@@ -211,6 +211,7 @@ body {
 		max-width: 100%;
 		transform: translateY(-100%);
 		transition: all 500ms ease-in-out ;
+		z-index: 100;
 	}
 	.hidden-menu {
 		opacity: 0;
